Update Sprint Boot to 3.0.9 and Java 17