@@ -12,16 +12,15 @@ import com.automobilefleet.exceptions.notfoundexception.RentalNotFoundException;
 import com.automobilefleet.repositories.CarRepository;
 import com.automobilefleet.repositories.CostumerRepository;
 import com.automobilefleet.repositories.RentalRepository;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
-import javax.transaction.Transactional;
 import java.time.temporal.ChronoUnit;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -37,7 +36,7 @@ public class RentalService {
                 .stream()
                 .filter(Objects::nonNull)
                 .map(rental -> this.mapper.map(rental, RentalResponse.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public RentalResponse getRentalById(UUID id) {
