@@ -6,16 +6,15 @@ import com.automobilefleet.entities.Specification;
 import com.automobilefleet.exceptions.ExceptionsConstants;
 import com.automobilefleet.exceptions.notfoundexception.NotFoundException;
 import com.automobilefleet.repositories.SpecificationRepository;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
-import javax.transaction.Transactional;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -29,7 +28,7 @@ public class SpecificationService {
                 .stream()
                 .filter(Objects::nonNull)
                 .map(specification -> this.mapper.map(specification, SpecificationResponse.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public SpecificationResponse getSpecification(UUID id) {
